Changed designer to developer

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     </div>
                     <div class="content-row">
                         <p>
-                            <span class="mobile-text">Digital Designer</span>
+                            <span class="mobile-text">Creative Developer</span>
                         </p>
                     </div>
                     <div class="content-row content-row-empty"></div>
