--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <link rel="stylesheet" href="main.css">
 
         <meta property="og:title" content="P.CV">
-        <meta property="og:description" content="Paul Macgregor - Designer">
+        <meta property="og:description" content="Tom Dunne - Designer">
         <meta property="og:image" content="#g">
         <meta property="og:url" content="h#">
         <meta name="twitter:card" content="summary_large_image">
